@@ -16,6 +16,7 @@ Core and Builtins
 Library
 -------
 
+- Issue #9128: Fix validation of class decorators in parser module.
 
 Extension Modules
 -----------------
